ZumZumFinancials_Dev1/src/objects/Sales_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension__c</fullName>
        <label>Dimension</label>
        <referenceTo>Dimension__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Format_Type__c</fullName>
        <label>Format Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Template__c</fullName>
        <label>Invoice Template</label>
        <referenceTo>Invoice_Template__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <label>Paid</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Number__c</fullName>
        <label>SOP Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settlement_Discount__c</fullName>
        <label>Settlement Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Settlement_Due_Days__c</fullName>
        <label>Settlement Due Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Gross__c</fullName>
        <label>Total Gross</label>
        <summarizedField>Sales_Invoice_Line_Item__c.Total_Gross__c</summarizedField>
        <summaryForeignKey>Sales_Invoice_Line_Item__c.Sales_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net__c</fullName>
        <label>Total Net</label>
        <summarizedField>Sales_Invoice_Line_Item__c.Total_Net__c</summarizedField>
        <summaryForeignKey>Sales_Invoice_Line_Item__c.Sales_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <label>Total VAT</label>
        <summarizedField>Sales_Invoice_Line_Item__c.VAT_Amount__c</summarizedField>
        <summaryForeignKey>Sales_Invoice_Line_Item__c.Sales_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sales Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SI Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>